--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
                 
                 
                                     <h1>トラのバターで焼いたホットケーキについて</h1>
-                    <p>この記事は、<a href="http://www.adventar.org/calendars/168">tumblr reblogging enviroment Advent Calendar 2013 - Adventar</a> 第9日目の記事です。</p>
+                    <p>この記事は、<a href="http://www.adventar.org/calendars/168">tumblr reblogging enviroment Advent Calendar 2013</a> 第9日目の記事です。</p>
 
 <figure class="tmblr-full" data-orig-height="230" data-orig-width="500" data-orig-src="./media/69388937465_0.gif"><img src="./media/69487138136_0.gif" data-orig-height="230" data-orig-width="500" data-orig-src="./media/69388937465_0.gif"></figure><figure class="tmblr-full" data-orig-height="230" data-orig-width="500" data-orig-src="./media/69388937465_1.gif"><img src="./media/69487138136_1.gif" data-orig-height="230" data-orig-width="500" data-orig-src="./media/69388937465_1.gif"></figure><p>“僕らはものすごい速度で忘れ去られていく”</p>
 
