--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-                
+  <title>トラのバターで焼いたホットケーキについて - no reblog, no like.</title>
                 <link rel="stylesheet" type="text/css" href="./style.css">
             </head>
             <body>
